<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tela"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignWithParentIfMissing="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentBottom="true"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="#F4F4F4"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_black"
        android:text="@string/chosepart"
        android:textColor="#403E3E"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />

    <TextView
        android:id="@+id/txttitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_black"
        android:text="@string/chosefinal"
        android:textColor="#403E3E"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168" />

    <Button
        android:id="@+id/btnBat"
        android:layout_width="145dp"
        android:layout_height="173dp"
        android:background="#434343"
        android:clickable="false"
        android:drawableTop="@drawable/batman"
        android:focusable="auto"
        android:fontFamily="@font/roboto"
        android:paddingTop="60dp"
        android:text="@string/titlebotton"
        android:textAllCaps="false"
        android:textColor="#DDDCE1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnSup"
        android:layout_width="145dp"
        android:layout_height="173dp"
        android:background="#1E88E5"
        android:drawableTop="@drawable/superman"
        android:focusable="auto"
        android:fontFamily="@font/roboto"
        android:paddingTop="60dp"
        android:text="@string/bottomname"
        android:textAllCaps="false"
        android:textColor="#DDDCE1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnAqua"
        android:layout_width="145dp"
        android:layout_height="173dp"
        android:background="#FB8C00"
        android:drawableTop="@drawable/poseidon"
        android:focusable="auto"
        android:fontFamily="@font/roboto"
        android:paddingTop="60dp"
        android:text="@string/bottomname3"
        android:textAllCaps="false"
        android:textColor="#DDDCE1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBat"
        app:layout_constraintVertical_bias="0.337"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnFla2"
        android:layout_width="145dp"
        android:layout_height="173dp"
        android:background="#CC2626"
        android:drawableTop="@drawable/flash"
        android:focusable="auto"
        android:fontFamily="@font/roboto"
        android:paddingTop="60dp"
        android:text="@string/bottomname2"
        android:textAllCaps="false"
        android:textColor="#DDDCE1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSup"
        app:layout_constraintVertical_bias="0.337"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/bntGit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F4F4F4"
        android:contentDescription="@android:string/ok"
        android:tint="#171616"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="?android:attr/listChoiceIndicatorSingle" />

</androidx.constraintlayout.widget.ConstraintLayout>

